# instalator

./: .env.example  Cargo.toml  README.md  build.rs  package.json
instrukcje/: instrukcja_rs_autodrom_slomczyn_rotax.txt  instrukcja_rs_bydgoszcz_rotax.txt  instrukcja_rs_tor_poznan.txt  instrukcja_rs_torun_rotax.txt  instrukcja_zbiorcza.txt  instrukcja_zs_gokart125.txt
src/: main.rs
